# actaseal-verify

./: .gitignore  AGENTS.md  CNAME  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  action.yml  comparison.html  generate_demo_packet.py  graveyard.html  index.html  llms.txt  pricing.html  pyproject.toml  spec_freeze.html  verify.py  verify_with_telemetry.py
.github/workflows/: ci.yml  ghcr-publish.yml
.well-known/: security.txt
conformance/: README.md  generate_vectors.py  test_conformance.py  vectors.sha256
conformance/vectors/rotated_key_still_verifies/: expected.json
conformance/vectors/tampered_chain/: authentication.json  expected.json  ledger_slice.ndjson  manifest.json  receipt.json
conformance/vectors/tampered_payload/: authentication.json  expected.json  ledger_slice.ndjson  manifest.json  receipt.json
conformance/vectors/valid/: authentication.json  expected.json  manifest.json  receipt.json
conformance/vectors/wrong_signature/: authentication.json  expected.json  manifest.json  receipt.json
demo/demo-packet-anchored/: acquisition.json  authentication.json  manifest.json  receipt.json
demo/demo-packet-unanchored/: authentication.json  manifest.json  receipt.json
docs/: whitepaper.md
docs/site/: index.html
tamper_demo/: README.npm.md  demo_data.js  index.html  package.json  verify_min.js
tests/: test_continuity_checkpoint.py  test_json_bomb_and_malformed_packet_v1.py  test_tamper_demo_js.py  test_telemetry_wrapper_v1.py  test_verify_demo_packet.py
(+8 files in other folders)
